--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <h1>Excellent</h1>
 
-<h1>The final result is: <font color="red">x=22/5 , y=12/5</font></h1>
+<br>
+<hr>
+<br>
+
+<h1>Final Result</h1>
+<h1>The solutions to the equation are:</h1>
+<h1><font color="red">Y = 35 , X = 16</font></h1>
+<h1>This means that any pair <font color="blue">(X,Y)</font> that satisfies either <font color="blue">Y = 35</font> or <font color="blue">X = 16</font> is a solution to the equation.</h1>
 
 <br>
 <hr>
